<resources>
    <string name="app_name" translatable="false">GoTo</string>
    <string name="welcome">Welcome!</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Retype password</string>
    <string name="sign_up">Sign up</string>
    <string name="google_authentication">Authenticate with Google</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="login">Login</string>
    <string name="do_not_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="field_must_be_completed">Field must be completed.</string>
    <string name="error_invalid_email">Email address is invalid.</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="register">Create one</string>
    <string name="tod">dsadsa</string>
    <string name="enter_account">Enter account</string>
    <string name="error_weak_password">The password is weak.</string>
    <string name="error_user_exists">This email is already used.</string>
    <string name="error_wrong_password">Wrong password.</string>
    <string name="error_user_does_not_exist">The user doesn\'t exist.</string>
    <string name="google_auth_failed">Google authentication failed.</string>
    <string name="address">Address</string>
    <string name="use_location">Use location</string>
    <string name="add_by_yourself">Add by yourself</string>
    <string name="we_recommend_that">We recommend that you use</string>
    <string name="the_location">the location</string>
    <string name="for_faster_results">for faster results</string>
    <string name="turn_it_on_to_use_this_functionality">Turn it on to use this functionality</string>
    <string name="location_is_disabled">Location is disabled</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="search_restaurants">Search restaurants</string>
    <string name="show_all">Show all</string>
    <string name="password_obscured">Password is obscured</string>
    <string name="password_is_not_obscured">Password isn\'t obscured</string>
    <string name="facebook_authentication">Authenticate with Facebook</string>
    <string name="clear_text">Clear text</string>
    <string name="search_food_category">Search a food category</string>
    <string name="close_categories">Close categories</string>
    <string name="all_food_categories">All food categories</string>
    <string name="go_back">Go back</string>
    <string name="search_food">Search food</string>
    <string name="rating">Rating</string>
    <string name="delivery_fee">Delivery fee</string>
    <string name="estimated_delivery_time">Estimated delivery time</string>
    <string name="free">Free</string>
    <string name="inspect_food">Inspect food</string>
    <string name="favorites">Favorites</string>
    <string name="search_results">Search results</string>
    <string name="close">Close</string>
    <string name="add_for">Add for</string>
    <string name="suggestions">Suggestions</string>
    <string name="buy_for">Buy for</string>
    <string name="decrease_quantity">Decrease quantity</string>
    <string name="increase_quantity">Increase quantity</string>
    <string name="pack">Ambalaj</string>
    <string name="compulsory">Compulsory</string>
    <string name="add_pack">Add pack</string>
    <string name="selected">Selected</string>
    <string name="unselected">Unselected</string>
    <string name="cart">Cart</string>
    <string name="change_address">Change address</string>
    <string name="payment_method">Payment method</string>
    <string name="select">Select</string>
    <string name="schedule_delivery">Schedule delivery</string>
    <string name="schedule">Schedule</string>
    <string name="total">Total</string>
    <string name="summary">Summary</string>
    <string name="info">Info</string>
    <string name="order">Order</string>
    <string name="with">With</string>
    <string name="cart_items">Cart items</string>
</resources>